<resources>

    <!-- TODO Change those Ad ID by your own Ad ID -->
    <!-- app ad section -->
    <string name="app_ad_id">ca-app-pub-6382099871444261~2045692236</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- end of the ad section -->

    <!-- TODO Change app name and splash text from here -->
    <string name="app_name">MANDO Smart Factory Application</string>
    <string name="splash_text">MANDO Smart Factory Application</string>
    <string name="action_flash">Flash</string>
    <string name="action_focus">Auto Focus</string>
    <string name="action_cam">Switch Camera</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_generate">Generate</string>
    <string name="menu_history">History</string>

    <string name="share">Install MSA app from:</string>
    <string name="tapAgain">Tap again to exit!</string>

    <string name="permission_not_granted">Permission not granted!</string>

    <string name="autofocus_on">Autofocus activated</string>
    <string name="autofocus_off">Autofocus deactivated</string>

    <string name="type_here_bar">Generate barcode</string>
    <string name="type_here_qr">Generate QR code</string>

    <string name="copied">Copied to clipboard.</string>
    <string name="result">Result</string>
    <string name="scanned_result">Scanned result:</string>

    <string name="saving">Saving...</string>
    <string name="preparing">Preparing...</string>
    <string name="saved_to">Saved to:\n</string>
    <string name="directory_in">directory in SD card.</string>
    <string name="no_history">History empty</string>

    <string name="copy">Copy</string>
    <string name="search">Search in Web</string>
    <string name="share_text">Share</string>
    <string name="action">Action</string>

    <string name="action_visit">Browse URL</string>
    <string name="action_youtube">Open Video in YouTube</string>
    <string name="action_call">Call</string>
    <string name="action_email">Email</string>

    <string name="delete_message_item">Are you sure you want to delete this item?</string>
    <string name="delete_message_all">Are you sure you want to clear the list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
